<resources>
    <string name="app_name">RetailBoss</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="dash_board">Dash Board</string>
    <string name="sales">Sales</string>
    <string name="settlements">Settlements</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="search_your_products">Search your products</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="purchase">Purchase</string>
    <string name="oil">Oil</string>
    <string name="stock">Stock</string>
    <string name="profit">Profit</string>
    <string name="filter">Filter</string>
    <string name="total_products">Total Products</string>
    <string name="sell_products">Sell Products</string>
    <string name="amount">Amount</string>
    <string name="product">-Product</string>
    <string name="_1058_65">$ 1058.65</string>
    <string name="powered_by_winapp_solution_pte_ltd">Powered by Winapp Solution pte ltd</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="total_categories">Total Categories</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
</resources>